// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SheetList /> should not render invalid children 1`] = `
<SheetList
  className={null}
  hasImages={false}
  testId={null}
>
  <List
    className={null}
  >
    <ul
      className={null}
    >
      <ListItem
        className="css-10041rq css-1ym3l2n"
        isSelected={false}
        key="child-0/.0"
      >
        <li
          className="css-1p5q8vq css-10041rq css-1ym3l2n css-16gj3o1"
          data-test-id="listItem"
        >
          <div
            className="css-1ckzvk7"
            data-test-id={null}
          >
            <Item
              className={null}
              image={null}
              isDisabled={false}
              isSelected={false}
              link={null}
              linkState={null}
              onClick={null}
              rightComponent={null}
              testId={null}
              title="List Item"
            >
              <div
                data-test-id={null}
              >
                <Grid
                  className="css-1qcr7hz"
                  component="div"
                  wrap={false}
                >
                  <div
                    className="css-1qcr7hz css-h7r55a"
                  >
                    <GridItem
                      className="css-rx1nvy"
                      component="div"
                      grow={1}
                      shrink={1}
                    >
                      <div
                        className="css-rx1nvy css-1gs0ko2"
                      >
                        List Item
                      </div>
                    </GridItem>
                  </div>
                </Grid>
              </div>
            </Item>
          </div>
        </li>
      </ListItem>
    </ul>
  </List>
</SheetList>
`;

exports[`<SheetList /> should not render without children 1`] = `
<SheetList
  className={null}
  hasImages={false}
  testId={null}
/>
`;

exports[`<SheetList /> should render a child and add styles for list items with images 1`] = `
<SheetList
  className={null}
  hasImages={true}
  testId={null}
>
  <List
    className={null}
  >
    <ul
      className={null}
    >
      <ListItem
        className="css-10041rq css-1ym3l2n css-1brrprg"
        isSelected={false}
        key="child-0/.0"
      >
        <li
          className="css-1p5q8vq css-10041rq css-1ym3l2n css-1brrprg css-16gj3o1"
          data-test-id="listItem"
        >
          <div
            className="css-1ckzvk7"
            data-test-id={null}
          >
            <Item
              className={null}
              image={null}
              isDisabled={false}
              isSelected={false}
              link={null}
              linkState={null}
              onClick={null}
              rightComponent={null}
              testId={null}
              title="List Item"
            >
              <div
                data-test-id={null}
              >
                <Grid
                  className="css-1qcr7hz"
                  component="div"
                  wrap={false}
                >
                  <div
                    className="css-1qcr7hz css-h7r55a"
                  >
                    <GridItem
                      className="css-rx1nvy"
                      component="div"
                      grow={1}
                      shrink={1}
                    >
                      <div
                        className="css-rx1nvy css-1gs0ko2"
                      >
                        List Item
                      </div>
                    </GridItem>
                  </div>
                </Grid>
              </div>
            </Item>
          </div>
        </li>
      </ListItem>
    </ul>
  </List>
</SheetList>
`;

exports[`<SheetList /> should render with two children 1`] = `
<SheetList
  className={null}
  hasImages={false}
  testId={null}
>
  <List
    className={null}
  >
    <ul
      className={null}
    >
      <ListItem
        className="css-10041rq css-1ym3l2n"
        isSelected={false}
        key="child-0/.0"
      >
        <li
          className="css-1p5q8vq css-10041rq css-1ym3l2n css-16gj3o1"
          data-test-id="listItem"
        >
          <div
            className="css-1ckzvk7"
            data-test-id={null}
          >
            <Item
              className={null}
              image={null}
              isDisabled={false}
              isSelected={false}
              link={null}
              linkState={null}
              onClick={null}
              rightComponent={null}
              testId={null}
              title="List Item"
            >
              <div
                data-test-id={null}
              >
                <Grid
                  className="css-1qcr7hz"
                  component="div"
                  wrap={false}
                >
                  <div
                    className="css-1qcr7hz css-h7r55a"
                  >
                    <GridItem
                      className="css-rx1nvy"
                      component="div"
                      grow={1}
                      shrink={1}
                    >
                      <div
                        className="css-rx1nvy css-1gs0ko2"
                      >
                        List Item
                      </div>
                    </GridItem>
                  </div>
                </Grid>
              </div>
            </Item>
          </div>
        </li>
      </ListItem>
      <ListItem
        className="css-10041rq"
        isSelected={false}
        key="child-1/.1"
      >
        <li
          className="css-1p5q8vq css-10041rq css-16gj3o1"
          data-test-id="listItem"
        >
          <div
            className="css-1ckzvk7"
            data-test-id={null}
          >
            <Item
              className={null}
              image={null}
              isDisabled={false}
              isSelected={false}
              link={null}
              linkState={null}
              onClick={null}
              rightComponent={null}
              testId={null}
              title="List Item"
            >
              <div
                data-test-id={null}
              >
                <Grid
                  className="css-1qcr7hz"
                  component="div"
                  wrap={false}
                >
                  <div
                    className="css-1qcr7hz css-h7r55a"
                  >
                    <GridItem
                      className="css-rx1nvy"
                      component="div"
                      grow={1}
                      shrink={1}
                    >
                      <div
                        className="css-rx1nvy css-1gs0ko2"
                      >
                        List Item
                      </div>
                    </GridItem>
                  </div>
                </Grid>
              </div>
            </Item>
          </div>
        </li>
      </ListItem>
    </ul>
  </List>
</SheetList>
`;
